; ModuleID = '/home/carl/AnghaBench/linux/drivers/power/supply/extr_bq2415x_charger.c_bq2415x_get_charge_current.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/power/supply/extr_bq2415x_charger.c_bq2415x_get_charge_current.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bq2415x_device = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@BQ2415X_REG_CURRENT = common dso_local global i32 0, align 4
@BQ2415X_MASK_VI_CHRG = common dso_local global i32 0, align 4
@BQ2415X_SHIFT_VI_CHRG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bq2415x_device*)* @bq2415x_get_charge_current to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bq2415x_get_charge_current(%struct.bq2415x_device* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.bq2415x_device*, align 8
  %4 = alloca i32, align 4
  store %struct.bq2415x_device* %0, %struct.bq2415x_device** %3, align 8
  %5 = load %struct.bq2415x_device*, %struct.bq2415x_device** %3, align 8
  %6 = getelementptr inbounds %struct.bq2415x_device, %struct.bq2415x_device* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = icmp sle i32 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load i32, i32* @EINVAL, align 4
  %12 = sub nsw i32 0, %11
  store i32 %12, i32* %2, align 4
  br label %32

13:                                               ; preds = %1
  %14 = load %struct.bq2415x_device*, %struct.bq2415x_device** %3, align 8
  %15 = load i32, i32* @BQ2415X_REG_CURRENT, align 4
  %16 = load i32, i32* @BQ2415X_MASK_VI_CHRG, align 4
  %17 = load i32, i32* @BQ2415X_SHIFT_VI_CHRG, align 4
  %18 = call i32 @bq2415x_i2c_read_mask(%struct.bq2415x_device* %14, i32 %15, i32 %16, i32 %17)
  store i32 %18, i32* %4, align 4
  %19 = load i32, i32* %4, align 4
  %20 = icmp slt i32 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %13
  %22 = load i32, i32* %4, align 4
  store i32 %22, i32* %2, align 4
  br label %32

23:                                               ; preds = %13
  %24 = load i32, i32* %4, align 4
  %25 = mul nsw i32 6800, %24
  %26 = add nsw i32 37400, %25
  %27 = load %struct.bq2415x_device*, %struct.bq2415x_device** %3, align 8
  %28 = getelementptr inbounds %struct.bq2415x_device, %struct.bq2415x_device* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = sdiv i32 %26, %30
  store i32 %31, i32* %2, align 4
  br label %32

32:                                               ; preds = %23, %21, %10
  %33 = load i32, i32* %2, align 4
  ret i32 %33
}

declare dso_local i32 @bq2415x_i2c_read_mask(%struct.bq2415x_device*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
